--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,22 +1,233 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>ColorAI</title>
-    <header class="site-header">
-        <nav class="navbar navbar-light bg-light"> 
-            <a class="navbar-brand" href="#">ColorAI</a>
-        </nav>
-    </header>
-</head>
-<body>
-    {% block content %}{% endblock content %}
-    
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>ColorAI</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="styles.css" rel="stylesheet" />
+        <style>
+            body{
+                padding: 0;
+                margin: 0;
+            }
+            a {
+            color: #64a19d;
+            text-decoration: none;
+            background-color: transparent;
+            }
+            a:hover {
+            color: #467370;
+            text-decoration: underline;
+            }
+
+            a:not([href]):not([class]) {
+            color: inherit;
+            text-decoration: none;
+            }
+            a:not([href]):not([class]):hover {
+            color: inherit;
+            text-decoration: none;
+            }
+            .masthead {
+                    position: relative;
+                    width: 100%;
+                    height: auto;
+                    min-height: 35rem;
+                    /* padding: 15rem 0; */
+                    
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-attachment: scroll;
+                    background-size: cover;
+                    }
+                    .masthead h1 {
+                    font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+                    font-size: 2.5rem;
+                    line-height: 2.5rem;
+                    letter-spacing: 0.8rem;
+                    background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
+                    -webkit-text-fill-color: transparent;
+                    -webkit-background-clip: text;
+                            background-clip: text;
+                    }
+                    .masthead h2 {
+                    max-width: 20rem;
+                    font-size: 1rem;
+                    }
+                    @media (min-width: 768px) {
+                    .masthead h1 {
+                        font-size: 4rem;
+                        line-height: 4rem;
+                    }
+                    }
+                    @media (min-width: 992px) {
+                    .masthead {
+                        height: 100vh;
+                        padding: 0;
+                    }
+                    .masthead h1 {
+                        font-size: 6.5rem;
+                        line-height: 6.5rem;
+                        letter-spacing: 0.8rem;
+                    }
+                    .masthead h2 {
+                        max-width: 30rem;
+                        font-size: 1.25rem;
+                    }
+                    .d-flex {
+                    display: flex !important;
+                    }
+                    .d-md-flex {
+                    display: flex !important;
+                    }
+                    .h-100 {
+                    height: 100% !important;
+                    }
+                    .align-items-center {
+                    align-items: center !important;
+                    }
+                    .mx-auto {
+                    margin-right: auto !important;
+                    }
+                    .mx-auto {
+                    margin-left: auto !important;
+                    }
+                    .text-center {
+                    text-align: center !important;
+                    }
+                    .my-0 {
+                    margin-top: 0 !important;
+                    }
+                    .my-0 {
+                    margin-bottom: 0 !important;
+                    }
+                    .text-uppercase {
+                    text-transform: uppercase !important;
+                    }
+                    .text-white-50 {
+                    color: rgba(255, 255, 255, 0.5) !important;
+                    }
+                    .mt-2,
+                    .my-2 {
+                    margin-top: 0.5rem !important;
+                    }
+                    .mb-5,
+                    .my-5 {
+                    margin-bottom: 3rem !important;
+                    }
+                    .btn {
+                    display: inline-block;
+                    font-weight: 400;
+                    color: #212529;
+                    text-align: center;
+                    vertical-align: middle;
+                    -webkit-user-select: none;
+                        -moz-user-select: none;
+                        -ms-user-select: none;
+                            user-select: none;
+                    background-color: transparent;
+                    border: 1px solid transparent;
+                    padding: 0.375rem 0.75rem;
+                    font-size: 1rem;
+                    line-height: 1.5;
+                    border-radius: 0.25rem;
+                    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+                    .btn {
+                        transition: none;
+                    }
+                    }
+                    .btn:hover {
+                    color: #212529;
+                    text-decoration: none;
+                    }
+                    .btn:focus, .btn.focus {
+                    outline: 0;
+                    box-shadow: 0 0 0 0.2rem rgba(100, 161, 157, 0.25);
+                    }
+                    .btn.disabled, .btn:disabled {
+                    opacity: 0.65;
+                    }
+                    .btn:not(:disabled):not(.disabled) {
+                    cursor: pointer;
+                    }
+                    a.btn.disabled,
+                    fieldset:disabled a.btn {
+                    pointer-events: none;
+                    }
+
+                    .btn-primary {
+                    color: #fff;
+                    background-color: #64a19d;
+                    border-color: #64a19d;
+                    }
+                    .btn-primary:hover {
+                    color: #fff;
+                    background-color: #548b87;
+                    border-color: #4f837f;
+                    }
+                    .btn-primary:focus, .btn-primary.focus {
+                    color: #fff;
+                    background-color: #548b87;
+                    border-color: #4f837f;
+                    box-shadow: 0 0 0 0.2rem rgba(123, 175, 172, 0.5);
+                    }
+                    .btn-primary.disabled, .btn-primary:disabled {
+                    color: #fff;
+                    background-color: #64a19d;
+                    border-color: #64a19d;
+                    }
+                    .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
+                    color: #fff;
+                    background-color: #4f837f;
+                    border-color: #4a7b78;
+                    }
+                    .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
+                    box-shadow: 0 0 0 0.2rem rgba(123, 175, 172, 0.5);
+                    }
+ 
+
+
+            }
+
+        </style>
+    </head>
+    <body id="page-top">
+
+        <!-- Masthead-->
+        <header class="masthead" style="background-image: url('https://i.imgur.com/0zJ0jAh.jpg'); background-repeat: no-repeat; background-size: cover; ">
+            <div class="gradient" style="margin: 0%; padding: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000000 100%);">
+                <div class="container d-flex h-100 align-items-center">
+                    <div class="mx-auto text-center">
+                        <h1 class="mx-auto my-0 text-uppercase">ColorAI</h1>
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5">Color your monochrome memories.</h2>
+
+                        {% block content %}{% endblock content %}
+                        
+                    </div>
+                </div>
+            </div>
+        </header>
+ 
+  
+        <!-- Footer-->
+        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Your Website 2020</div></footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Third party plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
